Various deployment bug fixes
